# mcp-sql-bridge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GUMROAD_DESCRIPTION.txt  LICENSE  Makefile  README.md  RUN_AND_TEST.md  docker-compose.test.yml  mkdocs.yml  pyproject.toml  server.json
.github/: SUPPORT.md
.github/workflows/: ci.yml  integration.yml  pages.yml  security.yml
docs/: ANNOUNCEMENT.md  DEPRECATION_AND_SUPPORT.md  ERROR_TAXONOMY.md  FUTURE.md  GITHUB_PAGES.md  LAUNCH_AND_MARKETING.md  MCP_REGISTRY.md  PRICING_AND_LICENSING.md  README.md  RELEASE_CRITERIA.md  REPO_TOPICS.md  SECURITY.md  SPRINT_PLAN.md  index.md
examples/: README.md  create_sample_db.py  mcp-config-pro.json  queries.sql
scripts/: run_docker_integration.py
src/mcp_sql_bridge/: __init__.py  server.py
tests/: conftest.py  test_execute_readonly_query.py  test_integration_docker.py  test_integration_sqlite.py  test_list_tables.py  test_performance.py  test_readme_resource.py  test_validation.py
web/: main.py  routes.py
web/templates/: index.html
