[tool.poetry]
name = "mcp-sql-bridge"
version = "0.2.0"
description = "MCP server bridge for SQL operations (SQLite, PostgreSQL, MySQL)"
authors = ["Firas Mosbahi <you@example.com>"]
readme = "README.md"
packages = [{ include = "mcp_sql_bridge", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
mcp = "*"
sqlalchemy = "*"
pydantic = "*"
psycopg = { version = "*", optional = true }
pymysql = { version = "*", optional = true }

[tool.poetry.scripts]
mcp-sql-bridge = "mcp_sql_bridge.server:main"
mcp-sql-bridge-web = "web.main:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "*"
ruff = "*"

[tool.poetry.group.web.dependencies]
fastapi = "*"
uvicorn = { extras = ["standard"], version = "*" }
mkdocs = "*"
mkdocs-material = "*"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # line too long — ruff format handles this
    "B008",   # do not perform function calls in default arguments
]

[tool.ruff.lint.isort]
known-first-party = ["mcp_sql_bridge"]

[tool.poetry.extras]
postgres = ["psycopg"]
mysql = ["pymysql"]
pro = ["psycopg", "pymysql"]
